Corrected add elem width and navbar pos on mobile #431203513500822

--- a/public/sources/less/layout/placement.less
+++ b/public/sources/less/layout/placement.less
@@ -216,7 +216,6 @@
     height: @editor-layout-content-height;
     width: @editor-layout-content-width;
     min-height: @editor-layout-content-min-height;
-    min-width: @editor-layout-content-min-width;
   }
   .vcv-layout-bar-content-start {
     height: @editor-layout-content-start-height;
@@ -226,7 +225,6 @@
   }
   .vcv-layout-bar-content-end {
     min-height: @editor-layout-content-end-min-height;
-    min-width: @editor-layout-content-end-min-width;
   }
   &.vcv-layout-dock--detached {
     .vcv-layout-bar {
